# aoc2021

./: .gitignore  aoc2021.cabal
src/: Day1.hs  Day1Part1.hs  Day1Part2.hs  Day2Part1.hs  Day2Part2.hs  Day3Part1.hs  Day3Part2.hs  Day4Part1.hs  Day4Part2.hs  Day5Part1.hs  Day5Part2.hs  Day6Part1.hs  Day6Part2.hs  Day7Part1.hs  Day7Part2.hs  Main.hs
