cabal-version: 3.6
name: aoc2021
version: 0.1.0.0

common shared
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wno-monomorphism-restriction
    -Wno-all-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-unsafe
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-prepositive-qualified-module

executable bin
  import: shared
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Day1Part1, Day1Part2, Day2Part1, Day2Part2, Day3Part1
  build-depends: base
